# dify_app

./: .gitignore  .pdm-python  README.md  pyproject.toml  score.py  species.py  t
src/: config.py  crawler.py  get_img.py  score.py  species.py  species.yml
src/SAM_Rosaceae/: MANUAL.md  config.py  crawler.py  deduplicate.py  old_img_score.py  preprocess.py  restore_folder.py  restore_name.py  segment.py  species_list.csv  text2mask.py
