[project]
name = "dify_app"
version = "0.1.0"
description = "LLM apps for plant"
authors = [
    { name = "wp", email = "wpwupingwp@outlook.com" },
]
dependencies = [
    'biopython',
    'quart',
    'uvicorn',
    'aiohttp',
    'selenium',
    'beautifulsoup4',
    'certifi',
    'urllib3',
    'loguru',
    'torch',
    'torchvision',
    'imagededup',
    "transformers>=4.42.3",
    "huggingface-cli>=0.1",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "torchmetrics>1.3",
    "opencv-python>=4.10.0.84",
]
requires-python = ">= 3.10"
readme = "README.md"
license = { text = "AGPL-3" }

[tool.pdm]
distribution = false

[tool.rye.scripts]
llm_server = 'uvicorn pubmed:app --port 2024'
crawler = 'python src/crawler.py'

[[tool.rye.sources]]
name3 = "pytorch"
url3 = "https://download.pytorch.org/whl/cu118"
name = 'tencent'
url = 'https://mirrors.cloud.tencent.com/pypi/simple'
